<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box"
        android:gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box_ratio"
        android:gravity="center"
        android:textStyle="italic"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boxstep1"/>
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box1"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boxstep2"/>
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box2"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boxstep3"/>
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box3"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boxstep4"/>
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box4"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:layout_gravity="center"/>
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/box5"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/citation"
        android:textSize="10sp"/>

</LinearLayout>
</ScrollView>